--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,10 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1">
   <title>Incremental Trade ULTIMATE</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * { margin: 0; padding: 0; box-sizing: border-box; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -webkit-touch-callout: none; }
 
 ```
 body {
@@ -604,6 +604,16 @@ log("Bienvenue dans Incremental Trade!", "unlock");
 
 let hasSeenTutorial = localStorage.getItem("hasSeenTutorial");
 if (!hasSeenTutorial) { showTutorial(); localStorage.setItem("hasSeenTutorial", "true"); }
+
+// Empêcher le zoom au double-clic sur mobile
+let lastTouchEnd = 0;
+document.addEventListener('touchend', function(event) {
+  let now = Date.now();
+  if (now - lastTouchEnd <= 300) {
+    event.preventDefault();
+  }
+  lastTouchEnd = now;
+}, false);
 </script>
 
 </body>
