--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1">
   <title>Incremental Trade ULTIMATE</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -webkit-touch-callout: none; }
+    * { margin: 0; padding: 0; box-sizing: border-box; user-select: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; -webkit-touch-callout: none; touch-action: manipulation; }
 
 ```
 body {
@@ -78,6 +78,9 @@ h1 {
   cursor: pointer;
   transition: all 0.3s;
   font-weight: bold;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 .tab-btn:hover { background: rgba(51,51,51,0.9); color: #0af; }
@@ -121,6 +124,9 @@ h1 {
   box-shadow: 0 10px 40px rgba(0,170,255,0.3);
   margin: 1rem auto;
   display: block;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 .click-btn:hover { transform: scale(1.05); box-shadow: 0 15px 50px rgba(0,170,255,0.5); }
@@ -148,6 +154,9 @@ h1 {
   cursor: pointer;
   transition: all 0.3s;
   font-weight: bold;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 .item button:hover { transform: translateY(-2px); box-shadow: 0 6px 15px rgba(0,170,255,0.3); }
@@ -528,12 +537,45 @@ function checkUnlocks() {
 }
 
 function clickVal() { let val = 1; for (let u of game.upgrades) { if (u.type === "click" && u.bought) val *= u.effect; } let labo = game.generators.find(g => g.id === "labo"); let usine = game.generators.find(g => g.id === "usine"); if (labo && usine && labo.count >= 2 && usine.count >= 5) val *= 1.5; val *= Math.pow(1.25, game.stars) * Math.pow(1.6, game.galaxies); val *= (1 + (game.darkMatter * 0.05)); return val * getBoostMult("click"); }
-function clickBtn() { let val = clickVal(); game.coins += val; game.totalCoins += val; game.totalClicks++; game.prestigeProgress += val; updateUI(); }
+function clickBtn() { 
+  let val = clickVal(); 
+  game.coins += val; 
+  game.totalCoins += val; 
+  game.totalClicks++; 
+  game.prestigeProgress += val; 
+  updateUI(); 
+}
 
 function cps() { let total = 0; let syn = 1; let robot = game.generators.find(g => g.id === "robot"); let usine = game.generators.find(g => g.id === "usine"); let port = game.generators.find(g => g.id === "port"); let labo = game.generators.find(g => g.id === "labo"); let satellite = game.generators.find(g => g.id === "satellite"); if (robot && usine && robot.count >= 5 && usine.count >= 3) syn *= 1.3; if (port && satellite && port.count >= 3 && satellite.count >= 2) syn *= 1.4; if (labo && usine && labo.count >= 2 && usine.count >= 5) syn *= 1.2; let totalGens = [robot, usine, port, labo, satellite].reduce((a,g) => a + (g ? g.count : 0), 0); if (totalGens >= 30 && game.prestigeCount >= 10) syn *= 2; for (let g of game.generators) { let eff = 1; for (let u of game.upgrades) { if (u.type === g.id && u.bought) eff *= u.effect; } total += g.count * g.base * eff * syn; } total *= Math.pow(1.25, game.stars) * Math.pow(1.6, game.galaxies); total *= (1 + (game.darkMatter * 0.05)); return total * getBoostMult("prod"); }
 
-function buyGen(id) { let g = game.generators.find(x => x.id === id); if (!g) return; let cost = g.price * Math.pow(g.mult, g.count); if (game.coins < cost) return; game.coins -= cost; g.count++; save(); updateUI(); }
-function buyUp(id) { let u = game.upgrades.find(x => x.id === id); if (!u || u.bought || game.coins < u.price) return; game.coins -= u.price; u.bought = true; log("✅ " + u.name, "success"); save(); updateUI(); }
+let isProcessing = false;
+function buyGen(id) { 
+  if (isProcessing) return;
+  isProcessing = true;
+  setTimeout(() => { isProcessing = false; }, 100);
+  
+  let g = game.generators.find(x => x.id === id); 
+  if (!g) return; 
+  let cost = g.price * Math.pow(g.mult, g.count); 
+  if (game.coins < cost) return; 
+  game.coins -= cost; 
+  g.count++; 
+  save(); 
+  updateUI(); 
+}
+function buyUp(id) { 
+  if (isProcessing) return;
+  isProcessing = true;
+  setTimeout(() => { isProcessing = false; }, 100);
+  
+  let u = game.upgrades.find(x => x.id === id); 
+  if (!u || u.bought || game.coins < u.price) return; 
+  game.coins -= u.price; 
+  u.bought = true; 
+  log("✅ " + u.name, "success"); 
+  save(); 
+  updateUI(); 
+}
 
 function doPrestige() { if (game.prestigeProgress < 5000) return; let gain = Math.floor(game.prestigeProgress / 5000); let mastery = Math.min(2, 1 + (game.prestigeCount * 0.1)); gain = Math.floor(gain * mastery); game.coins = 0; game.prestigeProgress = 0; game.stars += gain; game.prestigeCount++; if (game.prestigeCount >= 20 && game.prestigeCount % 10 === 0) { game.darkMatter++; log("🌙 +1 DARK MATTER!", "unlock"); } for (let g of game.generators) g.count = 0; for (let u of game.upgrades) u.bought = false; log("⭐ +" + gain + " étoiles! (×" + mastery.toFixed(2) + ")", "success"); checkUnlocks(); save(); updateUI(); }
 function doSuperPrestige() { let cost = game.galaxies === 0 ? 100 : 100 * Math.pow(10, game.galaxies); if (game.stars < cost) return; game.stars -= cost; game.galaxies++; log("🌀 +1 GALAXIE!", "unlock"); checkUnlocks(); save(); updateUI(); }
@@ -614,6 +656,18 @@ document.addEventListener('touchend', function(event) {
   }
   lastTouchEnd = now;
 }, false);
+
+// Bloquer le pinch-to-zoom
+document.addEventListener('gesturestart', function(e) {
+  e.preventDefault();
+}, false);
+
+// Bloquer les touchmove pour éviter les zooms accidentels
+document.addEventListener('touchmove', function(e) {
+  if (e.scale !== 1) {
+    e.preventDefault();
+  }
+}, { passive: false });
 </script>
 
 </body>
